feat: 다크모드 추가 및 설정 화면 작업

--- a/client/lib/l10n/app_en.arb
+++ b/client/lib/l10n/app_en.arb
@@ -47,5 +47,9 @@
   "navSettings": "Settings",
   "@navSettings": {
     "description": "Settings tab label"
-  }
+  },
+  "settingsTheme": "Theme",
+  "themeLight": "Light",
+  "themeDark": "Dark",
+  "themeSystem": "System default"
 } 
