feat: 테마를 따로 관리 및 네비게이션 바 추가로 인해 기존 달력 이동 로직 버그 수정

--- a/client/lib/l10n/app_en.arb
+++ b/client/lib/l10n/app_en.arb
@@ -51,5 +51,24 @@
   "settingsTheme": "Theme",
   "themeLight": "Light",
   "themeDark": "Dark",
-  "themeSystem": "System default"
+  "themeSystem": "System default",
+  "weekdaySun": "Sun",
+  "weekdayMon": "Mon",
+  "weekdayTue": "Tue",
+  "weekdayWed": "Wed",
+  "weekdayThu": "Thu",
+  "weekdayFri": "Fri",
+  "weekdaySat": "Sat",
+  "calendar": "Calendar",
+  "statistics": "Statistics",
+  "settings": "Settings",
+  "@calendar": {
+    "description": "Label for calendar navigation item"
+  },
+  "@statistics": {
+    "description": "Label for statistics navigation item"
+  },
+  "@settings": {
+    "description": "Label for settings navigation item"
+  }
 } 
