--- a/client/lib/l10n/app_ko.arb
+++ b/client/lib/l10n/app_ko.arb
@@ -27,5 +27,15 @@
   "settingsTheme": "테마",
   "themeLight": "라이트",
   "themeDark": "다크",
-  "themeSystem": "시스템 기본값"
+  "themeSystem": "시스템 기본값",
+  "weekdaySun": "일",
+  "weekdayMon": "월",
+  "weekdayTue": "화",
+  "weekdayWed": "수",
+  "weekdayThu": "목",
+  "weekdayFri": "금",
+  "weekdaySat": "토",
+  "calendar": "달력",
+  "statistics": "통계",
+  "settings": "설정"
 } 
