fix: todo 언어 변경시 subItemKey에 의해 언어설정 따라가도록

--- a/client/lib/l10n/app_en.arb
+++ b/client/lib/l10n/app_en.arb
@@ -90,5 +90,7 @@
   "subItemHobby": "Hobby",
   "subItemExercise": "Exercise",
   "subItemShopping": "Shopping",
-  "subItemSelfDevelopment": "Self Development"
+  "subItemSelfDevelopment": "Self Development",
+  "monthLabel": ".",
+  "dayLabel": ""
 } 
