--- a/client/lib/l10n/app_ko.arb
+++ b/client/lib/l10n/app_ko.arb
@@ -59,5 +59,16 @@
   "subItemShopping": "쇼핑",
   "subItemSelfDevelopment": "자기계발",
   "monthLabel": "월",
-  "dayLabel": "일"
+  "dayLabel": "일",
+  "am": "오전",
+  "pm": "오후",
+  "startTime": "시작 시간",
+  "endTime": "종료 시간",
+  "select": "선택하세요",
+  "cancel": "취소",
+  "confirm": "확인",
+  "selectStartTimeFirst": "시작 시간을 먼저 선택해주세요",
+  "endTimeMustBeAfterStart": "종료 시간은 시작 시간보다 늦어야 합니다",
+  "selectEndTimeFirst": "종료 시간을 선택해주세요",
+  "allDay": "종일"
 } 
