--- a/client/lib/l10n/app_en.arb
+++ b/client/lib/l10n/app_en.arb
@@ -107,5 +107,17 @@
   "eventDetails": "Event Details",
   "todoDescription": "Schedule description",
   "enterDescription": "Please enter description",
-  "save": "Save"
+  "save": "Save",
+  "calendarStartDay": "Calendar Start Day",
+  "@calendarStartDay": {
+    "description": "Setting for calendar start day of week"
+  },
+  "sunday": "Sunday",
+  "@sunday": {
+    "description": "Sunday"
+  },
+  "monday": "Monday",
+  "@monday": {
+    "description": "Monday"
+  }
 } 
