todo에 설명 확장 가능하도록, 제목과 설명 수정할 수 있도록

--- a/client/lib/l10n/app_en.arb
+++ b/client/lib/l10n/app_en.arb
@@ -119,5 +119,7 @@
   "monday": "Monday",
   "@monday": {
     "description": "Monday"
-  }
+  },
+  "todoDetails": "Todo Details",
+  "todoTitle": "Title"
 } 
