todo 설명에 마크다운 문법 적용 설정 추가

--- a/client/lib/l10n/app_en.arb
+++ b/client/lib/l10n/app_en.arb
@@ -121,5 +121,7 @@
     "description": "Monday"
   },
   "todoDetails": "Todo Details",
-  "todoTitle": "Title"
+  "todoTitle": "Title",
+  "markdownSetting": "Use Markdown",
+  "markdownSettingDescription": "Use markdown syntax in schedule descriptions"
 } 
